--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ p
   margin: 0;
   padding: 0;
   text-align: center;
-  font-family: 'Baloo Bhaijaan 2', cursive;
+  font-family: 'Roboto', sans-serif;
 }
 /*End basic reset*/
 
@@ -20,7 +20,8 @@ body
 {
   font-size: 12px;
   color: #333;
-  font-family: 'Baloo Bhaijaan 2', cursive;
+  font-family: 'Roboto', sans-serif;
+
 }
 
 
@@ -46,12 +47,11 @@ a:hover, a:active
 }
 
 /*Div is block level and no width specidied therefore stretches full screens*/
-#topBar
-{
+/*{
   background-color: #000;
   height: 20px;
 }
-
+*/
 /*Site Container*/
 /*This is essentially a box that we place the whole site in.
 we center the box using margin 0 auto and give it a fixed width of 920 + 20px +20px (960px)*/
@@ -339,14 +339,14 @@ __________________________________*/
 #mainFooter
 {
   margin-top: 40px;
-  margin-bottom: 5px;
+  padding-bottom: 5px;
   overflow: hidden;
 }
 
 #footerNav
 {
   float: left;
-  width: 500px;
+  width: 300px;
 }
 
 #contact
@@ -359,4 +359,5 @@ __________________________________*/
 {
   padding-bottom: 10px;
   overflow: hidden;
+  width: 150px;
 }
