--- a/css/main.css
+++ b/css/main.css
@@ -90,10 +90,6 @@ __________________________________*/
   height: auto;
 }
 
-.logo img:hover
-{
-
-}
 
 
 .Nav
@@ -266,71 +262,48 @@ __________________________________*/
 
 @keyframes shake
 {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-20deg); }
-  20% { transform: translate(-3px, 0px) rotate(20deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
+  0% { transform: translate(1px, 1px) rotate(3deg);}
+  20% { transform: translate(-4px, 0px) rotate(20deg);}
   40% { transform: translate(1px, -1px) rotate(20deg); }
-  50% { transform: translate(-1px, 2px) rotate(-20deg); }
   60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-20deg); }
   80% { transform: translate(-1px, -1px) rotate(20deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-20deg); }
 }
 
 @-moz-keyframes shake
 {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-20deg); }
-  20% { transform: translate(-3px, 0px) rotate(20deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
+  0% { transform: translate(1px, 1px) rotate(3deg); }
+  20% { transform: translate(-4px, 0px) rotate(20deg); }
   40% { transform: translate(1px, -1px) rotate(20deg); }
-  50% { transform: translate(-1px, 2px) rotate(-20deg); }
   60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-20deg); }
   80% { transform: translate(-1px, -1px) rotate(20deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-20deg); }
 }
 
 @-webkit-keyframes shake
 {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-20deg); }
-  20% { transform: translate(-3px, 0px) rotate(20deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
+  0% { transform: translate(1px, 1px) rotate(3deg); }
+  20% { transform: translate(-4px, 0px) rotate(20deg); }
   40% { transform: translate(1px, -1px) rotate(20deg); }
-  50% { transform: translate(-1px, 2px) rotate(-20deg); }
   60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-20deg); }
   80% { transform: translate(-1px, -1px) rotate(20deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-20deg); }
 }
 
 /*@keyframes color
 {
-	0%   {background: #64B079;}
-	25%  {background: #5EAD8C;}
-	50%  {background: #57A9A3;}
-	100% {background: #4FA4BF;}
+	75%  {background:green; left:0px; top:200px;}
 }
 
 @-moz-keyframes color
 {
-	0%   {background: #64B079;}
-	25%  {background: #5EAD8C;}
-	50%  {background: #57A9A3;}
-	100% {background: #4FA4BF;}
+  75%  {background:green; left:0px; top:200px;}
+
 }
 
 @-webkit-keyframes color
 {
-	0%   {background: #64B079;}
-	25%  {background: #5EAD8C;}
-	50%  {background: #57A9A3;}
-	100% {background: #4FA4BF;}
+  75%  {background:green; left:0px; top:200px;}
 }*/
 /*__________________________________
        flavor & price Section
